namespace PokerAPIMPwDB.Domain.Enums
{
    public enum GamePhase
    {
        WaitingForPlayer,
        PreFlop,
        Flop,
        Turn,
        River,
        Showdown
    }
}